<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clay1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:backgroundTint="@android:color/background_light"
    tools:context="com.example.snookertracker.SetupPlayers"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/name_4"
        android:layout_width="164dp"
        android:layout_height="43dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_3"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <EditText
        android:id="@+id/name_3"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/name_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/name_2"
        android:layout_width="165dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/name_1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView"
        android:layout_width="364dp"
        android:layout_height="34dp"
        android:text="@string/inputmessage"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView2"
        android:layout_width="71dp"
        android:layout_height="30dp"
        android:text="@string/player1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/name_1"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView3"
        android:layout_width="72dp"
        android:layout_height="30dp"
        android:text="@string/player1"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/name_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView4"
        android:layout_width="75dp"
        android:layout_height="31dp"
        android:text="@string/player2"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/name_3"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_1" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView5"
        android:layout_width="82dp"
        android:layout_height="33dp"
        android:text="@string/player2"
        android:textColor="@android:color/black"
        android:textColorLink="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/name_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/name_2" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/colorControlHighlight"
        android:text="@string/team1"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/textView8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.example.snookertracker.CustomTextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorControlHighlight"
        android:text="@string/team2"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/name_1"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/name_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:elevation="14dp"
        android:onClick="updateNames"
        android:text="@string/submit"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:textColorLink="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_4" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_dark"
        android:onClick="callsettings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_preferences" />

</android.support.constraint.ConstraintLayout>
